minikube/minikube-dashboard/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
  namespace: kubernetes-dashboard
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9090
  selector:
    k8s-app: kubernetes-dashboard
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: dashboard.ryandemolab.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard-service
                port:
                  number: 80
